kube1-05/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  selector:
    app: back
  ports:
  - name: multitool
    protocol: TCP
    port: 9002
    targetPort: 8080
