kube1-05/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: front
  ports:
  - name: nginx
    protocol: TCP
    port: 9001
    targetPort: 80
