kube1-05/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-ingress.neto.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 9002
